dnl Copyright (C) 2023 The C++ Plus Project
dnl This file is part of the build-aux Library.
dnl
dnl The build-aux Library is free software; you can redistribute it
dnl and/or modify it under the terms of the GNU General Public License
dnl as published by the Free Software Foundation; either version 3
dnl of the License, or (at your option) any later version.
dnl
dnl The build-aux Library is distributed in the hope that it will be
dnl useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with the build-aux Library; see the file COPYING.
dnl If not, see <https://www.gnu.org/licenses/>.

AC_PREREQ([2.64])
AC_INIT([build-aux], [1.0.0], [cpppteam@email.cn], [build-aux-1.0.0.tar.gz], [https://github.com/cppp-project/build-aux])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
